--- a/research/develop/2019-08-01_lzw-Data_develop-notebook.ipynb
+++ b/research/develop/2019-08-01_lzw-Data_develop-notebook.ipynb
@@ -1,1 +1,36 @@
-
+{
+ "metadata": {
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": 3
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2,
+ "cells": [
+  {
+   "source": [
+    "#Initial Data Exploration and Experimentation\n",
+    "We will import data from yahoo finance using their API and clean up and compile it into a table of potential features."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ]
+}
