--- a/research/develop/2020-09-01_lzw-Data_Data-analysis.ipynb
+++ b/research/develop/2020-09-01_lzw-Data_Data-analysis.ipynb
@@ -30,7 +30,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n"
+   ]
   }
  ]
 }
